chore: ignore build artifacts in app bundle

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@
 xcuserdata/
 DerivedData/
 .DS_Store
+NvimVoice.app/Contents/MacOS/
+NvimVoice.app/Contents/Resources/
+NvimVoice.app/Contents/_CodeSignature/
+AppIcon.icns
