--- a/NvimVoice/Resources/AppInfo.plist
+++ b/NvimVoice/Resources/AppInfo.plist
@@ -4,12 +4,22 @@
 <dict>
     <key>CFBundleName</key>
     <string>NvimVoice</string>
+    <key>CFBundleDisplayName</key>
+    <string>NvimVoice</string>
     <key>CFBundleIdentifier</key>
     <string>com.victorgalvez.NvimVoice</string>
+    <key>CFBundleExecutable</key>
+    <string>NvimVoice</string>
+    <key>CFBundlePackageType</key>
+    <string>APPL</string>
     <key>CFBundleVersion</key>
     <string>1</string>
     <key>CFBundleShortVersionString</key>
     <string>1.0.0</string>
+    <key>CFBundleIconFile</key>
+    <string>AppIcon</string>
+    <key>NSHighResolutionCapable</key>
+    <true/>
     <key>LSUIElement</key>
     <true/>
     <key>NSMicrophoneUsageDescription</key>
