feat: add landing page with interactive keyboard demo, deploy to Vercel
- Next.js landing page with Hero, Features, Demo GIF, interactive
  Moonlander keyboard visualization, HowItWorks, TechStack, and
  download sections
- Animated keyboard demo showing <leader>ff key sequence with
  step-by-step highlights using framer-motion
- Direct .dmg download, favicon from logo, LinkedIn and Buy Me a
  Coffee links in footer
- Standard keyboard layout provider, keyboard onboarding step,
  and keyboard map highlight support in Swift app
- README updated with correct tagline and landing page link
- Deployed to https://web-pi-three-34.vercel.app

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,13 @@ NvimVoice.app/Contents/MacOS/
 NvimVoice.app/Contents/Resources/
 NvimVoice.app/Contents/_CodeSignature/
 AppIcon.icns
+*.dmg
+
+# Web (Next.js)
+web/node_modules/
+web/.next/
+web/out/
+web/.env
+web/.env.local
+web/public/*.dmg
+web/public/*.gif
